vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_procedure_declaration.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_declaration, \"procedure foo;\")"
---
SubprogramDeclaration
  ProcedureSpecification
    Keyword(Procedure)
    Identifier 'foo'
  SemiColon
