vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_procedure_specification_with_parameters.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_declaration, \"procedure foo(foo : natural);\")"
---
SubprogramDeclaration
  ProcedureSpecification
    Keyword(Procedure)
    Identifier 'foo'
    ParameterList
      ParenthesizedInterfaceList
        LeftPar
        InterfaceList
          InterfaceObjectDeclaration
            IdentifierList
              Identifier 'foo'
            Colon
            SubtypeIndication
              Name
                NameDesignatorPrefix
                  Identifier 'natural'
        RightPar
  SemiColon
