vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_subprogram_body.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_body,\n\"\\\nfunction foo(arg : natural) return natural is\n  constant foo : natural := 0;\nbegin\n  return foo + arg;\nend function;\")"
---
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      Identifier 'foo'
      ParameterList
        ParenthesizedInterfaceList
          LeftPar
          InterfaceList
            InterfaceObjectDeclaration
              IdentifierList
                Identifier 'arg'
              Colon
              SubtypeIndication
                Name
                  NameDesignatorPrefix
                    Identifier 'natural'
          RightPar
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'natural'
    Keyword(Is)
  Declarations
    ConstantDeclaration
      Keyword(Constant)
      IdentifierList
        Identifier 'foo'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'natural'
      InitialValue
        ColonEq
        LiteralExpression
          AbstractLiteral '0'
      SemiColon
  DeclarationStatementSeparator
    Keyword(Begin)
  SequenceOfStatements
    ReturnStatement
      Keyword(Return)
      BinaryExpression
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'foo'
        Plus
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'arg'
      SemiColon
  SubprogramBodyEpilogue
    Keyword(End)
    Keyword(Function)
    SemiColon
