vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_subprogram_body_end_operator_symbol.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_body,\n\"\\\nfunction \\\"+\\\"(arg : natural) return natural is\nbegin\nend function \\\"+\\\";\")"
---
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      StringLiteral '"+"'
      ParameterList
        ParenthesizedInterfaceList
          LeftPar
          InterfaceList
            InterfaceObjectDeclaration
              IdentifierList
                Identifier 'arg'
              Colon
              SubtypeIndication
                Name
                  NameDesignatorPrefix
                    Identifier 'natural'
          RightPar
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'natural'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  SubprogramBodyEpilogue
    Keyword(End)
    Keyword(Function)
    StringLiteral '"+"'
    SemiColon
