vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__parses_subprogram_declaration.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_body,\n\"\\\nfunction foo(arg : natural) return natural is\nbegin\nend function foo;\")"
---
SubprogramBody
  SubprogramBodyPreamble
    FunctionSpecification
      Keyword(Function)
      Identifier 'foo'
      ParameterList
        ParenthesizedInterfaceList
          LeftPar
          InterfaceList
            InterfaceObjectDeclaration
              IdentifierList
                Identifier 'arg'
              Colon
              SubtypeIndication
                Name
                  NameDesignatorPrefix
                    Identifier 'natural'
          RightPar
      Keyword(Return)
      Name
        NameDesignatorPrefix
          Identifier 'natural'
    Keyword(Is)
  DeclarationStatementSeparator
    Keyword(Begin)
  SubprogramBodyEpilogue
    Keyword(End)
    Keyword(Function)
    Identifier 'foo'
    SemiColon
