vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__subprogram_instantiation-2.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_instantiation_declaration,\n\"function my_proc is new proc;\")"
---
SubprogramInstantiationDeclaration
  SubprogramInstantiationDeclarationPreamble
    Keyword(Function)
    Identifier 'my_proc'
    Keyword(Is)
    Keyword(New)
    Name
      NameDesignatorPrefix
        Identifier 'proc'
  SemiColon
