vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__subprogram_instantiation.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_instantiation_declaration,\n\"procedure my_proc is new proc;\")"
---
SubprogramInstantiationDeclaration
  SubprogramInstantiationDeclarationPreamble
    Keyword(Procedure)
    Identifier 'my_proc'
    Keyword(Is)
    Keyword(New)
    Name
      NameDesignatorPrefix
        Identifier 'proc'
  SemiColon
