vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__subprogram__tests__swap_function.snap
---
source: vhdl_syntax/src/parser/productions/subprogram.rs
expression: "to_test_text(Parser::subprogram_body,\n\"\\\nprocedure swap\n  generic ( type T )\n  parameter (a, b : inout T) is\n  variable temp : T;\nbegin\n  temp := a; a := b; b := temp;\nend procedure swap;\")"
---
SubprogramBody
  SubprogramBodyPreamble
    ProcedureSpecification
      Keyword(Procedure)
      Identifier 'swap'
      SubprogramHeader
        SubprogramHeaderGenericClause
          Keyword(Generic)
          LeftPar
          InterfaceList
            InterfaceIncompleteTypeDeclaration
              Keyword(Type)
              Identifier 'T'
          RightPar
      ParameterList
        Keyword(Parameter)
        ParenthesizedInterfaceList
          LeftPar
          InterfaceList
            InterfaceObjectDeclaration
              IdentifierList
                Identifier 'a'
                Comma
                Identifier 'b'
              Colon
              Keyword(Inout)
              SubtypeIndication
                Name
                  NameDesignatorPrefix
                    Identifier 'T'
          RightPar
    Keyword(Is)
  Declarations
    VariableDeclaration
      Keyword(Variable)
      IdentifierList
        Identifier 'temp'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'T'
      SemiColon
  DeclarationStatementSeparator
    Keyword(Begin)
  SequenceOfStatements
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'temp'
      ColonEq
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'a'
      SemiColon
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'a'
      ColonEq
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'b'
      SemiColon
    SimpleVariableAssignment
      NameTarget
        Name
          NameDesignatorPrefix
            Identifier 'b'
      ColonEq
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'temp'
      SemiColon
  SubprogramBodyEpilogue
    Keyword(End)
    Keyword(Procedure)
    Identifier 'swap'
    SemiColon
